# satya-zig

./: .gitignore  ACHIEVEMENTS.md  ADR.md  AGENT.md  BATCH_VALIDATION_RESULTS.md  BENCHMARK_ANALYSIS.md  BENCHMARK_COMPARISON.md  BUILD_EXPLAINED.md  CLAUDE.md  COMPREHENSIVE_VALIDATORS.md  CONTRIBUTING.md  DHI_API_REFERENCE.md  DOCS.md  EXECUTIVE_SUMMARY.md  FINAL_RESULTS.md  LICENSE  MISSION_COMPLETE.md  PERFORMANCE_ANALYSIS.md  QUICK_SUMMARY.md  README.md  REAL_WORLD_BENCHMARKS.md  RECOMMENDATIONS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_v1.0.11.sh  SATYA_PATTERNS.md  TODO.md  build.zig
.github/: RELEASE.md
.github/workflows/: build-wheels.yml  publish-npm.yml
benchmarks/: benchmark.zig
examples/: advanced_example.zig  basic_usage.zig  json_example.zig
js-bindings/: .npmignore  ADDING_TO_OFFICIAL_BENCHMARKS.md  AGENT.md  CHANGELOG.md  CLAUDE.md  FEATURE_COMPARISON.md  LICENSE  NEXTJS.md  NEXTJS_SUMMARY.md  OPTIMIZATION_NOTES.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_ANALYSIS.md  PUBLISHING.md  README.md  benchmark-blazing.ts  benchmark-complete.ts  benchmark-comprehensive.ts  benchmark-extreme.ts  benchmark-fast.ts  benchmark-final.ts  benchmark-financial.ts  benchmark-optimized.ts  benchmark-turbo.ts  benchmark-ultra.ts  benchmark.ts  dhi.wasm  index-extreme.ts  index-ultra.ts  index.ts  package-lock.json  package.json  schema-blazing.ts  schema-fast.ts  schema-nextjs.ts  schema-optimized.ts  schema-turbo.ts  schema-ultra.ts  schema.ts  test-all-features.ts  test-simple.ts  (+1 more)
js-bindings/examples/frontend/: package.json
js-bindings/examples/frontend/app/: page.tsx
python-bindings/: .gitignore  AGENT.md  MANIFEST.in  NATIVE_OPTIONS.md  PERFORMANCE.md  PUBLISHING.md  PUBLISH_NOW.sh  README.md  README_UPDATE.md  READY_TO_PUBLISH.md  analyze_bottleneck.py  bench_dhi_native_vs_satya.py  benchmark.py  benchmark_batch.py  benchmark_native.py  benchmark_vs_all.py  compare_systems.py  create_graph.py  diagnose_performance.py  example.py  pyproject.toml  run_benchmark_venv.sh  setup.py  test_batch_simple.py  test_comprehensive_validators.py  test_direct_optimization.py  test_native.py
python-bindings/.venv-publish/: pyvenv.cfg
python-bindings/dhi/: __init__.py  _native.c  batch.py  validator.py
python-bindings/dhi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python-bindings/examples/: finance_validator.py  type_checker.py
python-bindings/tests/: test_validators.py
src/: c_api.zig  combinators.zig  json_validator.zig  root.zig  simd_validators.zig  validator.zig  wasm_api.zig
typescript-runtime-type-benchmarks/: README.md  dhi.ts
