[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhi"
version = "0.1.0"
description = "High-performance data validation for Python, powered by Zig"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rach Pradhan", email = "rach@example.com"}
]
keywords = ["validation", "data-validation", "pydantic", "zig", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/justrach/satya-zig"
Documentation = "https://github.com/justrach/satya-zig#readme"
Repository = "https://github.com/justrach/satya-zig"
Issues = "https://github.com/justrach/satya-zig/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]
