[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhi"
version = "1.0.11"
description = "Ultra-fast data validation for Python - 28M validations/sec, 3x faster than Rust alternatives"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rach Pradhan", email = "rach@rachpradhan.com"}
]
keywords = [
    "validation", "data-validation", "pydantic", "zig", "performance", 
    "fast", "validator", "email", "url", "uuid", "schema"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Other",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/justrach/satya-zig"
Documentation = "https://github.com/justrach/satya-zig#readme"
Repository = "https://github.com/justrach/satya-zig"
Issues = "https://github.com/justrach/satya-zig/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]
